# rag-directory

./: README.md  pyproject.toml  requirements.txt  setup.py
rag_directory/: cli.py
src/rag_directory/: __init__.py  __main__.py  cli.py
